k8s/ms3.nosql-mongodb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nosql-mongodb-ingress
  namespace: nosql-mongodb
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
  rules:
    - host: nosql.anla.works
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nosql-mongodb-service
                port:
                  number: 80
